--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       	</div>
     </div>
     <div class="carousel-item">
-      <img src="4.jpg" class="d-block img-fluid" alt="3rd Slide">
+      <img src="slide4.jpg" class="d-block img-fluid" alt="3rd Slide">
       	<div class="carousel-caption">
       		<h5>Donate & Help To Give Them a Life</h5>
       	</div>
