--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="nav-link" href="#">Home </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="#C2">About Us</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -102,7 +102,10 @@
   </a>
 </div>
 <section>
-	
+  <div class="scroll">
+    <h2 id="C2">ABOUT US</h2>
+    <p>here we go</p>
+  </div>
 </section>
 </body>
 </html>
