--- a/index.html
+++ b/index.html
@@ -34,7 +34,191 @@
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a><!DOCTYPE html>
+<html>
+<head>
+	<title>Engaged For Change</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+<!----NavigationBar---->
+<section id="nav-bar">
+<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="#"><img src="logo.png"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#C2">About Us</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Missions
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Donate</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Volunteer</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Health</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact Us</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+</section>
+
+<!----Slider----->
+<div id="Slider"></div>
+<div id="headerSlider" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#headerSlider" data-slide-to="0" class="active"></li>
+    <li data-target="#headerSlider" data-slide-to="1" class="active"></li>
+    <li data-target="#headerSlider" data-slide-to="2" class="active"></li>
+    <li data-target="#headerSlider" data-slide-to="3" class="active"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="slide1.jpg" class="d-block w-100" alt="4th Slide">
+      	<div class="carousel-caption">
+      		<h5>Donate & Help Save a Life</h5>
+      	</div>
+    </div>
+    <div class="carousel-item">
+      <img src="slide2.jpg" class="d-block w-100" alt="1st Slide">
+      	<div class="carousel-caption">
+      		<h5>Feed the Poor To Help Them Survive</h5>
+      	</div>
+    </div>
+    <div class="carousel-item img">
+      <img src="slide3.jpg" class="d-block w-100" alt="2nd Slide">
+      	<div class="carousel-caption">
+      		<h5>Save Humanity To Help Them Survive</h5>
+      	</div>
+    </div>
+    <div class="carousel-item img">
+      <img src="slide4.jpg" class="d-block w-100" alt="3rd Slide">
+      	<div class="carousel-caption">
+      		<h5>Donate & Help To Give Them a Life</h5>
+      	</div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#headerSlider" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#headerSlider" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<!-------About------->
+<section>
+  <div class="scroll">
+    <h2 id="C2">ABOUT US</h2>
+    <p>here we go aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+  </div>
+</section>
+<!-----Team Members----->
+<section id="team">
+<div class ="container">
+	<h1>Our Team</h1>
+	<div class="row">
+	<div class="col-md-3 profile-pic text-center">
+	<div class ="img-box">
+	<img src="sponge.png" class="img-responsive">
+		<ul>
+			<a href="#"><li><i class ="fa fa-facebook"></i></li></a>
+			<a href="#"><li><i class ="fa fa-twitter"></i></li></a>
+			<a href="#"><li><i class ="fa fa-linkedin"></i></li></a>
+		</ul>
+	</div>
+		<h2>Name</h2>
+		<h3>Designation</h3>
+		<p>bla blah blah blah blah blah</p>
+	</div>
+	<div class="col-md-3 profile-pic text-center">
+	<div class ="img-box">
+	<img src="sponge.png" class="img-responsive">
+		<ul>
+			<a href="#"><li><i class ="fa fa-facebook"></i></li></a>
+			<a href="#"><li><i class ="fa fa-twitter"></i></li></a>
+			<a href="#"><li><i class ="fa fa-linkedin"></i></li></a>
+		</ul>
+	</div>
+		<h2>Name</h2>
+		<h3>Designation</h3>
+		<p>bla blah blah blah blah blah</p>
+	</div>
+	<div class="col-md-3 profile-pic text-center">
+	<div class ="img-box">
+	<img src="sponge.png" class="img-responsive">
+		<ul>
+			<a href="#"><li><i class ="fa fa-facebook"></i></li></a>
+			<a href="#"><li><i class ="fa fa-twitter"></i></li></a>
+			<a href="#"><li><i class ="fa fa-linkedin"></i></li></a>
+		</ul>
+	</div>
+		<h2>Name</h2>
+		<h3>Designation</h3>
+		<p>bla blah blah blah blah blah</p>
+	</div>
+	<div class="col-md-3 profile-pic text-center">
+	<div class ="img-box">
+	<img src="sponge.png" class="img-responsive">
+		<ul>
+			<a href="#"><li><i class ="fa fa-facebook"></i></li></a>
+			<a href="#"><li><i class ="fa fa-twitter"></i></li></a>
+			<a href="#"><li><i class ="fa fa-linkedin"></i></li></a>
+		</ul>
+	</div>
+		<h2>Name</h2>
+		<h3>Designation</h3>
+		<p>bla blah blah blah blah blah</p>
+	</div>
+	</div>
+</div>
+</section>
+</body>
+</html>
         </div>
       </li>
       <li class="nav-item">
