--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </a>
 </div>
 <!-------About------->
-<section id="C2">
+<section id="team">
   <div class="container">
     <h2>ABOUT US</h2>
     <div class="about-content">
