--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="coronavius.jpg" class="d-block w-100" alt="4th Slide">
+      <img src="slide1.jpg" class="d-block w-100" alt="4th Slide">
       	<div class="carousel-caption">
       		<h5>Donate & Help Save a Life</h5>
       	</div>
