--- a/index.html
+++ b/index.html
@@ -108,12 +108,7 @@
   <div class = "row">
   	<h2>About Us</h2>
   	<div class="about-content">
-    here we go aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-	  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+    The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens. Lockdowns are seen as the only possible and reliable means of protection and the reduction of further outbreak of the virus. These lockdowns, imposed in various countries and cities of the world have led to the unemployment and unforeseen disturbances in the lives of people. While the economically and financially stable part of the population is somehow coping with the sudden halt in their own ways, the livelihood of the poor, unemployed and the needy is jeopardized. The main concern of the governments all around the globe is to somehow provide for these people by introducing various fundraising schemes, providing basic facilities like shelter and food, proper medical testing and treatment for the Covid positive patients.
 </div>
 	  	<button type="button" class="btn btn-primary">Read more</button>
   </div>
