--- a/index.html
+++ b/index.html
@@ -31,20 +31,22 @@
           Missions
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Donate for the Cause</a>
+          <a class="dropdown-item" href="#">Engaging Volunteers</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Ensuring Health</a>
+	  	  <a class="dropdown-item" href="#">Providing Psychological Relaxation</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Donate</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Volunteer</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Health</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Services
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Door to Door Drone Grocery Delivery</a>
+          <a class="dropdown-item" href="#">Salute to the Heros of the Day</a>
+          <a class="dropdown-item" href="#">Sharing Experiences With The World</a>
+          <a class="dropdown-item" href="#">Gift a Feeling To The People At Risk</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact Us</a>
