--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       	</div>
     </div>
     <div class="carousel-item img">
-      <img src="slider2.jpg" class="d-block w-100" alt="3rd Slide">
+      <img src="slide4.jpg" class="d-block w-100" alt="3rd Slide">
       	<div class="carousel-caption">
       		<h5>Donate & Help To Give Them a Life</h5>
       	</div>
