--- a/index.html
+++ b/index.html
@@ -239,5 +239,42 @@
 	</div>
 </div>
 </section>
+
+<!--------contact us------>
+<section id="contact">
+  <div class="container">
+    <h1>Get In Touch</h1>
+    <div class="row">
+      <div class="col-md-6">
+      <form class="contact-form">
+      <div class="form-group">
+      <input type="text" class="form-control" placeholder="Your name">
+      </div>
+      <div class="form-group">
+      <input type="number" class="form-control" placeholder="Phone number">
+      </div>
+      <div class="form-group">
+      <input type="email" class="form-control" placeholder="Email Id">
+      </div>
+      <div class="form-group">
+      <textarea class="form-control" rows="4" placeholder="Message"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">SEND MESSAGE</button>
+      </form>
+      </div>
+      <div class="col-md-6 contact-info">
+      <div class="follow"><b>Address:</b><i class="fas fa-map-pin"></i>XYZ Road, Bangalore, IN</div>
+      <div class="follow"><b>Phone:</b><i class="fas fa-phone"></i>91+ 1234567890</div>
+      <div class="follow"><b>Email:</b><i class="fas fa-envelope"></i>example@website.com</div>
+      <div class="follow"><label><b>Find us on:</b></label>
+        <a href="#"><i class="fas fa-facebook"></i></a>
+        <a href="#"><i class="fas fa-youtube-play"></i></a>
+        <a href="#"><i class="fas fa-twitter"></i></a>
+        <a href="#"><i class="fas fa-google-plus"></i></a>
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
 </body>
 </html>
