--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
       <div class="follow"><b>Phone:</b><i class="fas fa-phone"></i>91+ 1234567890</div>
       <div class="follow"><b>Email:</b><i class="fas fa-envelope"></i>example@website.com</div>
       <div class="follow"><label><b>Find us on:</b></label>
-        <a href="#"><i class="fas fa-facebook"></i></a>
-        <a href="#"><i class="fas fa-youtube-play"></i></a>
-        <a href="#"><i class="fas fa-twitter"></i></a>
-        <a href="#"><i class="fas fa-google-plus"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-youtube-play"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-google-plus"></i></a>
       </div>
       </div>
     </div>
