--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
       </form>
       </div>
       <div class="col-md-6 contact-info">
-      <div class="follow"><b>Address:</b><i class="fas fa-map-pin"></i>XYZ Road, Bangalore, IN</div>
-      <div class="follow"><b>Phone:</b><i class="fas fa-phone"></i>91+ 1234567890</div>
-      <div class="follow"><b>Email:</b><i class="fas fa-envelope"></i>example@website.com</div>
+      <div class="follow"><b>Address:</b><i class="fa fa-map-pin"></i>XYZ Road, Bangalore, IN</div>
+      <div class="follow"><b>Phone:</b><i class="fa fa-phone"></i>91+ 1234567890</div>
+      <div class="follow"><b>Email:</b><i class="fa fa-envelope"></i>example@website.com</div>
       <div class="follow"><label><b>Find us on:</b></label>
         <a href="#"><i class="fa fa-facebook"></i></a>
         <a href="#"><i class="fa fa-youtube-play"></i></a>
