--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <div class="box">
       <div class="card">
         <div class="imgBx">
-            <img src="donate.png" alt="images">
+            <img src="donate.PNG" alt="images">
         </div>
         <div class="details">
             <h2>Donate for Change<br>
@@ -135,7 +135,7 @@
     
        <div class="card">
          <div class="imgBx">
-            <img src="volunteer.png" alt="images">
+            <img src="volunteer.PNG" alt="images">
          </div>
          <div class="details">
             <h2>Join for Help<br>
@@ -144,16 +144,16 @@
 
        <div class="card">
          <div class="imgBx">
-            <img src="relax.png" alt="images">
+            <img src="relax.PNG" alt="images">
          </div>
          <div class="details">
-            <h2>Phsycological Relaxation<br>
+            <h2>Psycological Relaxation<br>
           </div>
        </div>
 
        <div class="card">
          <div class="imgBx">
-            <img src="health.png" alt="images">
+            <img src="health.PNG" alt="images">
          </div>
          <div class="details">
             <h2>Healthcare<br>
