--- a/donate.html
+++ b/donate.html
@@ -42,7 +42,7 @@
         	<p>The fund will also enable micro-donations. The minimum donation accepted for the PM CARES Fund is ₹10 (14¢ US). The donations will be tax exempt and fall under corporate social responsibility. The Prime Minister had said that the PMO had received many requests to help in the war against COVID-19. Accordingly, the fund was set up and will be used for disaster management and research.</p>
           </div>
 
-        	<h2>OBJECTIVEs</h2>
+        	<h2>OBJECTIVES</h2>
         <div class="lessons">
         	<p>1.To undertake and support relief or assistance of any kind relating to a public health emergency or any other kind of emergency, calamity or distress, either man-made or natural, including the creation or upgradation of healthcare or pharmaceutical facilities, other necessary infrastructure, funding relevant research or any other type of support.</p>
         	<p>2.To render financial assistance, provide grants of payments of money or take such other steps as may be deemed necessary by the Board of Trustees to the affected population.</p>
