--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
 <head>
 	<title>Engaged For Change</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
@@ -13,7 +20,7 @@
 <!----NavigationBar---->
 <section id="nav-bar">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="logo.png"></a>
+  <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -31,7 +38,7 @@
           Missions
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="donate.html">Donate for the Cause</a>
+          <a class="dropdown-item" href="#">Donate for the Cause</a>
           <a class="dropdown-item" href="#">Engaging Volunteers</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Ensuring Health</a>
@@ -71,25 +78,25 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="slide4.jpg" class="d-block w-100" alt="4th Slide">
+      <img src="img/slide4.jpg" class="d-block w-100" alt="4th Slide">
       	<div class="carousel-caption">
       		<h5>Donate & Help Save a Life</h5>
       	</div>
     </div>
     <div class="carousel-item">
-      <img src="slide2.jpg" class="d-block w-100" alt="1st Slide">
+      <img src="img/slide2.jpg" class="d-block w-100" alt="1st Slide">
       	<div class="carousel-caption">
       		<h5>Feed the Poor To Help Them Survive</h5>
       	</div>
     </div>
     <div class="carousel-item img">
-      <img src="slide3.jpg" class="d-block w-100" alt="2nd Slide">
+      <img src="img/slide3.jpg" class="d-block w-100" alt="2nd Slide">
       	<div class="carousel-caption">
       		<h5>Save Humanity To Help Them Survive</h5>
       	</div>
     </div>
     <div class="carousel-item img">
-      <img src="slide 4.jpg" class="d-block w-100" alt="3rd Slide">
+      <img src="img/slide 4.jpg" class="d-block w-100" alt="3rd Slide">
       	<div class="carousel-caption">
       		<h5>Donate & Help To Give Them a Life</h5>
       	</div>
@@ -116,8 +123,102 @@
   </div>
   </div>
 </section>
-	
+<!--Our Services-->
+<main>
+    <h2 class="section-heading">Our Services</h2>
+<section>
+	<div class="row">
+	<div class="col-md-6">
+        <section>
+            <div class="cards">
+                <div class="cards-image">
+                    <a href="#">
+                        <img src="img/drone.jpg" alt="Card Image">
+                    </a>
+                </div>
+
+                <div class="cards-description font">
+                    <a href="#">
+                        <h3>Door To Door Drone Grocery Delivery</h3>
+                    </a>
+                    <p>
+                        The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens.
+                    </p>
+                    <a href="#" class="btn-readmore">Read more</a>
+                </div>
+            </div>
+        </div>
+            <div class="col-md-6">
+            <div class="cards">
+                <div class="cards-image">
+                    <a href="#">
+                        <img src="img/gift.jpg" alt="Card Image">
+                    </a>
+                </div>
+
+                <div class="cards-description font">
+                    <a href="#">
+                        <h3>Gift a Feeling To The People At Risk</h3>
+                    </a>
+                    <p>
+                        The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens.
+                    </p>
+                    <a href="#" class="btn-readmore">Read more</a>
+                </div>
+            </div>
+        </div>
+    	</div>
+</section>
+
+        <a href="#">
+        	<h2 class="section-heading">Our Blogs</h2>
+    	</a>
+    	<section>
+    	<div class="row">
+		<div class="col-md-6">
+            <div class="cards">
+                <div class="cards-image">
+                    <a href="#">
+                        <img src="img/hero.jpg" alt="Card Image">
+                    </a>
+                </div>
+
+                <div class="cards-description font">
+                    <a href="#">
+                        <h3>Salute To The Heros of The Day</h3>
+                    </a>
+                    <p>
+                        The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens.
+                    </p>
+                    <a href="#" class="btn-readmore">Read more</a>
+                </div>
+            </div>
+        </div>
+        	<div class="col-md-6">
+            <div class="cards">
+                <div class="cards-image">
+                    <a href="#">
+                        <img src="img/1.jpg" alt="Card Image">
+                    </a>
+                </div>
+
+                <div class="cards-description font">
+                    <a href="#">
+                        <h3>Sharing Experiences With The World</h3>
+                    </a>
+                    <p>
+                        The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens.
+                    </p>
+                    <a href="#" class="btn-readmore">Read more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+        </section>
+</section>
+    </main>
 <!--Our Missions-->
+
 <section>
 <div class ="container">
 	<h1>Missions</h1>
@@ -126,7 +227,7 @@
   <div class="box">
       <div class="card">
         <div class="imgBx">
-            <img src="donate.PNG" alt="images">
+            <img src="img/donate.PNG" alt="images">
         </div>
         <div class="details">
             <h2>Donate for Change<br>
@@ -135,7 +236,7 @@
     
        <div class="card">
          <div class="imgBx">
-            <img src="volunteer.PNG" alt="images">
+            <img src="img/volunteer.PNG" alt="images">
          </div>
          <div class="details">
             <h2>Join for Help<br>
@@ -144,16 +245,16 @@
 
        <div class="card">
          <div class="imgBx">
-            <img src="relax.PNG" alt="images">
+            <img src="img/relax.PNG" alt="images">
          </div>
          <div class="details">
-            <h2>Psycological Relaxation<br>
+            <h2>Phsycological Relaxation<br>
           </div>
        </div>
 
        <div class="card">
          <div class="imgBx">
-            <img src="health.PNG" alt="images">
+            <img src="img/health.PNG" alt="images">
          </div>
          <div class="details">
             <h2>Healthcare<br>
@@ -169,7 +270,7 @@
 	<div class="row">
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
-	<img src="sponge.png" class="img-responsive">
+	<img src="img/sponge.png" class="img-responsive">
 		<ul>
 			<a href="#"><li><i class ="fa fa-facebook"></i></li></a>
 			<a href="#"><li><i class ="fa fa-twitter"></i></li></a>
@@ -182,7 +283,7 @@
 	</div>
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
-	<img src="sponge.png" class="img-responsive">
+	<img src="img/sponge.png" class="img-responsive">
 		<ul>
 			<a href="#"><li><i class ="fa fa-facebook"></i></li></a>
 			<a href="#"><li><i class ="fa fa-twitter"></i></li></a>
@@ -195,7 +296,7 @@
 	</div>
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
-	<img src="sponge.png" class="img-responsive">
+	<img src="img/sponge.png" class="img-responsive">
 		<ul>
 			<a href="#"><li><i class ="fa fa-facebook"></i></li></a>
 			<a href="#"><li><i class ="fa fa-twitter"></i></li></a>
@@ -208,7 +309,7 @@
 	</div>
 	<div class="col-md-3 profile-pic text-center">
 	<div class ="img-box">
-	<img src="sponge.png" class="img-responsive">
+	<img src="img/sponge.png" class="img-responsive">
 		<ul>
 			<a href="#"><li><i class ="fa fa-facebook"></i></li></a>
 			<a href="#"><li><i class ="fa fa-twitter"></i></li></a>
@@ -222,10 +323,9 @@
 	</div>
 </div>
 </section>
-
 <!--------contact us------>
 <section id="contact">
-  <div class="container">
+  <div class="container back">
     <h1>Get In Touch</h1>
     <div class="row">
       <div class="col-md-6">
