--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           Missions
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Donate for the Cause</a>
+          <a class="dropdown-item" href="donate.html">Donate for the Cause</a>
           <a class="dropdown-item" href="#">Engaging Volunteers</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Ensuring Health</a>
