--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   <div class="box">
       <div class="card">
         <div class="imgBx">
-            <img src="img/donate.PNG" alt="images">
+            <img src="img/donate.png" alt="images">
         </div>
         <div class="details">
             <h2>Donate for Change<br>
@@ -236,7 +236,7 @@
     
        <div class="card">
          <div class="imgBx">
-            <img src="img/volunteer.PNG" alt="images">
+            <img src="img/volunteer.png" alt="images">
          </div>
          <div class="details">
             <h2>Join for Help<br>
@@ -245,7 +245,7 @@
 
        <div class="card">
          <div class="imgBx">
-            <img src="img/relax.PNG" alt="images">
+            <img src="img/relax.png" alt="images">
          </div>
          <div class="details">
             <h2>Phsycological Relaxation<br>
@@ -254,7 +254,7 @@
 
        <div class="card">
          <div class="imgBx">
-            <img src="img/health.PNG" alt="images">
+            <img src="img/health.png" alt="images">
          </div>
          <div class="details">
             <h2>Healthcare<br>
