--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="style1.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script type="text/javascript" src="main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -117,9 +118,9 @@
   <div class = "row">
   	<h2>About Us</h2>
   	<div class="about-content">
-    <p>The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens. Lockdowns are seen as the only possible and reliable means of protection and the reduction of further outbreak of the virus. These lockdowns, imposed in various countries and cities of the world have led to the unemployment and unforeseen disturbances in the lives of people. While the economically and financially stable part of the population is somehow coping with the sudden halt in their own ways, the livelihood of the poor, unemployed and the needy is jeopardized. The main concern of the governments all around the globe is to somehow provide for these people by introducing various fundraising schemes, providing basic facilities like shelter and food, proper medical testing and treatment for the Covid positive patients.Our aim behind building this website was to provide an online platform where the citizens can contribute their part in this fight against this global crisis. We believe that by collective support, motivation and contribution we can collect funds for the betterment of our society in these highly testing times. Our page aims at bringing together people so that they can interact, form ideas and share their stories with each other.</p>
+    <p>The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens. Lockdowns are seen as the only possible and reliable means of protection and the reduction of further outbreak of the virus. These lockdowns, imposed in various countries and cities of the world<span id="dots">...</span><span id="more"> have led to the unemployment and unforeseen disturbances in the lives of people. While the economically and financially stable part of the population is somehow coping with the sudden halt in their own ways, the livelihood of the poor, unemployed and the needy is jeopardized. The main concern of the governments all around the globe is to somehow provide for these people by introducing various fundraising schemes, providing basic facilities like shelter and food, proper medical testing and treatment for the Covid positive patients.Our aim behind building this website was to provide an online platform where the citizens can contribute their part in this fight against this global crisis. We believe that by collective support, motivation and contribution we can collect funds for the betterment of our society in these highly testing times. Our page aims at bringing together people so that they can interact, form ideas and share their stories with each other.</span></p>
+    <a onclick="myFunction()" id="myBtn" class="btn-readmore">Read more</a>
 </div>
-<a href="#" class="btn-readmore">Read more</a>
   </div>
   </div>
 </section>
