--- a/hero.html
+++ b/hero.html
@@ -83,7 +83,7 @@
       <section id="blogpost">
         <div class="cards">
           <div class="cards-image size">
-            <img src="1.jpg" alt="Card Image">
+            <img src="img/1.jpg" alt="Card Image">
           </div>
           <div class="cards-description description">
             <h3 align="center">The Introduction</h3>
