--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!----NavigationBar---->
 <section id="nav-bar">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+  <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,6 +30,9 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
         <a class="nav-link" href="index.html">Home </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://station.ch/en/just-smile">Just Smile</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#about">About Us</a>
@@ -57,7 +60,7 @@
           <a class="dropdown-item" href="#">Gift a Feeling To The People At Risk</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact Us</a>
+        <a class="nav-link" href="#contact">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
