--- a/donate.html
+++ b/donate.html
@@ -14,7 +14,7 @@
 <div class="container">
 <section id="nav-bar">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+  <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,7 +53,7 @@
           <a class="dropdown-item" href="#">Gift a Feeling To The People At Risk</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="index.html/#contact">Contact Us</a>
+        <a class="nav-link" href="index.html">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
