--- a/hero.html
+++ b/hero.html
@@ -25,7 +25,7 @@
   <!----NavigationBar---->
 <section id="nav-bar">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+  <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -33,13 +33,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home </a>
+        <a class="nav-link" href="index.html">Home </a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="https://station.ch/en/just-smile">Just Smile </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about">About Us</a>
+        <a class="nav-link" href="index.html">About Us</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -47,7 +47,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="donate.html">Donate for the Cause</a>
-          <a class="dropdown-item" href="#">Engaging Volunteers</a>
+          <a class="dropdown-item" href="volunteer.html">Engaging Volunteers</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Ensuring Health</a>
         <a class="dropdown-item" href="#">Providing Psychological Relaxation</a>
@@ -59,12 +59,12 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Door to Door Drone Grocery Delivery</a>
-          <a class="dropdown-item" href="#">Salute to the Heros of the Day</a>
+          <a class="dropdown-item" href="hero.html">Salute to the Heros of the Day</a>
           <a class="dropdown-item" href="#">Sharing Experiences With The World</a>
           <a class="dropdown-item" href="#">Gift a Feeling To The People At Risk</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact Us</a>
+        <a class="nav-link" href="index.html">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -108,19 +108,19 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Just Smile</a>
+                        <a href="https://station.ch/en/just-smile">Just Smile</a>
                     </li>
                     <li>
-                        <a href="#about">About Us</a>
+                        <a href="index.html">About Us</a>
                     </li>
                     <li>
-                        <a href="blogslist.html">Missions</a>
+                        <a href="index.html">Missions</a>
                     </li>
                     <li>
-                        <a href="blogslist.html">Services</a>
+                        <a href="index.html">Services</a>
                     </li>
                     <li>
-                        <a href="#">Contact Us</a>
+                        <a href="index.html">Contact Us</a>
                     </li>
                 </ul>
             </p>
