--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <h3>Door To Door Drone Grocery Delivery</h3>
                     </a>
                     <p>
-                        The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens.
+                       As the prevailing Coronavirus is a highly contagious and communicable disease, going out to buy even basic necessities like groceries and medicines exposes one to the very high risks of being infected by the virus. An equipment like a delivery drone which is an autonomous vehicle, often an unmanned aerial vehicle (UAV), can be used to transport packages, food or other necessary goods to the people at their doorsteps. 
                     </p>
                     <a href="#" class="btn-readmore">Read more</a>
                 </div>
