--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <h3>Gift a Feeling To The People At Risk</h3>
                     </a>
                     <p>
-                        The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens.
+                        Not only has Covid-19 impacted our daily lives and brought a halt, it also has impacted our mental health adversely. We find ourselves surrounded by a constant fear and uncertainty. The people who are tested positive, quarantined and the people who are working closely in these places have to go through a very difficult time and still have to work in these conditions. 
                     </p>
                     <a href="#" class="btn-readmore">Read more</a>
                 </div>
