--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <h3>Salute To The Heros of The Day</h3>
                     </a>
                     <p>
-                        The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens.
+                        On this page we’ll be sharing such daily posts about acts of great courage and vigour. We promise that reading these stories will make you feel a little more thankful and amazed by the efforts that all these people are putting in.
                     </p>
                     <a href="#" class="btn-readmore">Read more</a>
                 </div>
@@ -211,7 +211,7 @@
                         <h3>Sharing Experiences With The World</h3>
                     </a>
                     <p>
-                        The recent Novel Covid-19 outbreak is the first global pandemic witnessed by our generation. As the coronavirus pandemic grinds the world to a halt, the focus of the world’s most powerful countries has shifted towards the protection and welfare of their citizens.
+                        Sharing our experiences can lead to a lot many people gaining some ideas to better utilize their time. By sharing of our stories and experiences we can help each other in these depressing times. Share your stories and let the world know about that one skill that you learned or the book that you read, or that beautiful poetry that you wrote. It can be anything, as long as pursuing that hobby or interest excites you and provides you happiness.
                     </p>
                     <a href="#" class="btn-readmore">Read more</a>
                 </div>
