--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
                 </div>
 
                 <div class="cards-description font">
-                    <a href="#">
+                    <a href="hero.html">
                         <h3>Salute To The Heros of The Day</h3>
                     </a>
                     <p>
                         On this page we’ll be sharing such daily posts about acts of great courage and vigour. We promise that reading these stories will make you feel a little more thankful and amazed by the efforts that all these people are putting in.
                     </p>
-                    <a href="#" class="btn-readmore">Read more</a>
+                    <a href="hero.html" class="btn-readmore">Read more</a>
                 </div>
             </div>
         </div>
