--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 		<div class="col-md-6">
             <div class="cards">
                 <div class="cards-image">
-                    <a href="#">
+                    <a href="hero.html">
                         <img src="img/hero.jpg" alt="Card Image">
                     </a>
                 </div>
