--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a class="dropdown-item" href="volunteer.html">Engaging Volunteers</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Ensuring Health</a>
-	  	  <a class="dropdown-item" href="#">Providing Psychological Relaxation</a>
+	  	  <a class="dropdown-item" href="blog.html">Providing Psychological Relaxation</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -56,7 +56,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Door to Door Drone Grocery Delivery</a>
           <a class="dropdown-item" href="hero.html">Salute to the Heros of the Day</a>
-          <a class="dropdown-item" href="bloggg.html">Sharing Experiences With The World</a>
+          <a class="dropdown-item" href="blog.html">Sharing Experiences With The World</a>
           <a class="dropdown-item" href="#">Gift a Feeling To The People At Risk</a>
       </li>
       <li class="nav-item">
