--- a/dronedelivery.html
+++ b/dronedelivery.html
@@ -16,7 +16,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
-  <link rel="stylesheet" href="drone.css">
+  <link rel="stylesheet" href="page.css">
 
   <title>Drone-to-Drone Delivery</title>
 </head>
@@ -78,28 +78,24 @@
 <!----drone service----->
   <main>
 
-    <h2 class="page-heading">Drone-to-Drone Delivery</h2>
+    <h2 class="page-heading">Door-to-Door Drone Delivery</h2>
     <div id="post-container">
-      <section id="blogpost">
+      
         <div class="cards">
           <div class="cards-image size">
             <img src="img/droneservice.jpg" alt="Card Image">
           </div>
           <div class="cards-description description">
-            <h3 align="center">Drone Delivery and its significance</h3>
+            <h3 class="page-heading" align="center">Drone Delivery and its significance</h3>
             <p>As the prevailing Coronavirus is a highly contagious and communicable disease, going out to buy even basic necessities like groceries and medicines exposes one to the very high risks of being infected by the virus. An equipment like a delivery drone which is an autonomous vehicle, often an unmanned aerial vehicle (UAV), can be used to transport packages, food or other necessary goods to the people at their doorsteps.</p>
             <p>This reduces the otherwise high risks of coming in contact of an infected person or item. These drones are technologically advanced solutions to one of the many problems faced by the people in these times.</p> 
 
-            <h3 align="center">Drone-to-Drone Delivery Service</h3>
+            <h3 class="page-heading" align="center">Door-to-Door Delivery Service via Drones</h3>
             <p>The latest steps taken by the government include the complete isloation of several localities/societies/colonies in various cities all around the country. These areas are sealed due to a significant number of positive tested cases reported. The people residing in these hotspots,as they are named, have been cutoff completely making it difficult for them to even arrange necessary items. The drone service turns out to be the most safe and reliable means of providing them with these items at their door-step.</p>
             <p>If you or anyone you know are stuck in a situation like this, we would like to extend our support and help by delivering these products to you. Please fill the form below to avail our drone delivery service.</p>
 
           </div>
         </div>
-
-      </section>
-
-      
     </div>
 
     <footer>
