--- a/volunteer.html
+++ b/volunteer.html
@@ -16,7 +16,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
-  <link rel="stylesheet" href="volunteer.css">
+  <link rel="stylesheet" href="page.css">
 
   <title>Volunteer</title>
 </head>
@@ -147,13 +147,13 @@
         <li>Sociologists</li>
         </ul>
 
-            <h3 align="center">Call To Doctors To Work As Volunteers For COVID-19 Outbreak</h3>
+            <h3 class="page-heading" align="center">Call To Doctors To Work As Volunteers For COVID-19 Outbreak</h3>
             <p>The country is facing an unprecedented public health emergency with the COVID-19 pandemic affecting several parts of the nation.</p>
           <p>In case the outbreak leads to a high number of infected individuals, our public health facilities will face tremendous load to take care of the large number of patients. This overwhelming burden may not be met by the available doctors in the public health system.</p>
           <p>The Government of India requests for volunteer doctors who are fit and willing to be available for providing their services in the public health facilities and the training hospitals in the near future. We appeal to such doctors to come forward at this hour of need. You could also be a retired government, Armed Forces Medical Services, public sector undertaking or a private doctor.</p>
           <a href="https://niti.gov.in/healthcovid/volunteer_covid.php" class="btn message"><span class="fa fa-message"><b>To Volunteer as a doctor</b></span></a>
 
-          <h3 align="center">Volunteers for public service other than medical staff</h3>
+          <h3 class="page-heading" align="center">Volunteers for public service other than medical staff</h3>
           <p>Social mobilizers, community workers and volunteers have an important role in providing timely and actionable health information so that people know how to protect themselves and reduce the risks associated with the coronavirus disease 2019 (COVID-19).</p>
           <p>Awareness Campaign, Printing and distribution of IEC material on COVID-19 in local language.
           Some of the initiatives to be taken up by the volunteers are Procurement and distribution of hygiene & personal safety materials like masks, soaps, sanitizers etc., House to house visit to explain about the precautions to be taken for COVID-19, Distribution of food items to poor and needy, Dry ration, vegetables and kitchen being run in many places, Helping to maintain social distancing at the shops where people come for essential items.</p>
