--- a/hero.html
+++ b/hero.html
@@ -50,7 +50,7 @@
           <a class="dropdown-item" href="volunteer.html">Engaging Volunteers</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Ensuring Health</a>
-        <a class="dropdown-item" href="#">Providing Psychological Relaxation</a>
+        <a class="dropdown-item" href="blog.html">Providing Psychological Relaxation</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -58,9 +58,9 @@
           Services
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Door to Door Drone Grocery Delivery</a>
+          <a class="dropdown-item" href="dronedelivery">Door to Door Drone Grocery Delivery</a>
           <a class="dropdown-item" href="hero.html">Salute to the Heros of the Day</a>
-          <a class="dropdown-item" href="#">Sharing Experiences With The World</a>
+          <a class="dropdown-item" href="blog.html">Sharing Experiences With The World</a>
           <a class="dropdown-item" href="#">Gift a Feeling To The People At Risk</a>
       </li>
       <li class="nav-item">
