--- a/index.html
+++ b/index.html
@@ -136,19 +136,19 @@
         <section>
             <div class="cards">
                 <div class="cards-image">
-                    <a href="#">
+                    <a href="dronedelivery.html">
                         <img src="img/drone.jpg" alt="Card Image">
                     </a>
                 </div>
 
                 <div class="cards-description font">
-                    <a href="#">
+                    <a href="dronedelivery.html">
                         <h3>Door To Door Drone Grocery Delivery</h3>
                     </a>
                     <p>
                        As the prevailing Coronavirus is a highly contagious and communicable disease, going out to buy even basic necessities like groceries and medicines exposes one to the very high risks of being infected by the virus. An equipment like a delivery drone which is an autonomous vehicle, often an unmanned aerial vehicle (UAV), can be used to transport packages, food or other necessary goods to the people at their doorsteps. 
                     </p>
-                    <a href="#" class="btn-readmore">Read more</a>
+                    <a href="dronedelivery.html" class="btn-readmore">Read more</a>
                 </div>
             </div>
         </div>
@@ -201,19 +201,19 @@
         	<div class="col-md-6">
             <div class="cards">
                 <div class="cards-image">
-                    <a href="#">
+                    <a href="blog.html">
                         <img src="img/1.jpg" alt="Card Image">
                     </a>
                 </div>
 
                 <div class="cards-description font">
-                    <a href="#">
+                    <a href="blog.html">
                         <h3>Sharing Experiences With The World</h3>
                     </a>
                     <p>
                         Sharing our experiences can lead to a lot many people gaining some ideas to better utilize their time. By sharing of our stories and experiences we can help each other in these depressing times. Share your stories and let the world know about that one skill that you learned or the book that you read, or that beautiful poetry that you wrote. It can be anything, as long as pursuing that hobby or interest excites you and provides you happiness.
                     </p>
-                    <a href="#" class="btn-readmore">Read more</a>
+                    <a href="blog.html" class="btn-readmore">Read more</a>
                 </div>
             </div>
         </div>
