--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <a class="dropdown-item" href="donate.html">Donate for the Cause</a>
           <a class="dropdown-item" href="volunteer.html">Engaging Volunteers</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Ensuring Health</a>
+          <a class="dropdown-item" href="health.html">Ensuring Health</a>
 	  	  <a class="dropdown-item" href="blog.html">Providing Psychological Relaxation</a>
         </div>
       </li>
