--- a/health.html
+++ b/health.html
@@ -95,11 +95,11 @@
                 <h3 class="page-heading" align="center" style="color: black">Volunteers For Doctor</h3>
                 <p> Situations Fund (PM CARES Fund) was created on 28 March 2020 following the COVID-19 pandemic in India. The fund will be used for combating, containment and relief efforts against the coronavirus outbreak and similar pandemic like situations in the future. The Prime Minister is the chairman of the trust. Members will include the defence, home and finance ministers. </p>
                 <p>The fund will also enable micro-donations. The minimum donation accepted for the PM CARES Fund is ₹10 (14¢ US). The donations will be tax exempt and fall under corporate social responsibility. The Prime Minister had said that the PMO had received many requests to help in the war against COVID-19. Accordingly, the fund was set up and will be used for disaster management and research.</p>
-                <script type="text/javascript" src="https://form.jotform.com/jsform/201056389311046"></script>
+                <a href="https://form.jotform.com/jsform/201056389311046" onclick="myFunction()" id="my" class="btn-readmore">Register Yourself Here</a> 
                 <h3 class="page-heading" align="center" style="color: black">Patient</h3>
                 <p>1.To undertake and support relief or assistance of any kind relating to a public health emergency or any other kind of emergency, calamity or distress, either man-made or natural, including the creation or upgradation of healthcare or pharmaceutical facilities, other necessary infrastructure, funding relevant research or any other type of support.</p>
                 <p>2.To render financial assistance, provide grants of payments of money or take such other steps as may be deemed necessary by the Board of Trustees to the affected population.</p>
-                <script type="text/javascript" src="https://form.jotform.com/jsform/201056672827053"></script> 
+                <a href="https://form.jotform.com/jsform/201056672827053" onclick="myFunction()" id="my" class="btn-readmore">Register Yourself Here</a> 
 
             </div>
         </div>
