--- a/health.html
+++ b/health.html
@@ -97,8 +97,8 @@
                 <a href="https://form.jotform.com/jsform/201056389311046" onclick="myFunction()" id="my" class="btn-readmore">Register Yourself Here</a> 
                 <h3 class="page-heading" align="center" style="color: black">For Patients</h3>
                 <p>If you or anyone you know is in need to consult a doctor for medical help, diagnosis and treatment, please provide us with some necessary details and type of disease/treatment required and you would be able to see a list of available doctors. We would provide you with their contact information.</p>
-                <a href="https://form.jotform.com/jsform/201056672827053" onclick="myFunction()" id="my" class="btn-readmore">Register Yourself Here</a> 
-
+                <p><a href="https://form.jotform.com/jsform/201056672827053" onclick="myFunction()" id="my" class="btn-readmore">Register Yourself Here</a> 
+              </p>
             </div>
         </div>
 
