--- a/health.html
+++ b/health.html
@@ -94,7 +94,7 @@
 
                 <h3 class="page-heading" align="center" style="color: black">For Doctors</h3>
                 <p>Through this platform, We request doctors to please provide us with some of the necessary details about themselves, so that people who need to consult them can  easily contact these doctors. This way, the people can easily contact the doctors in case of emergencies and medical help.</p>
-                <a href="https://form.jotform.com/jsform/201056389311046" onclick="myFunction()" id="my" class="btn-readmore">Register Yourself Here</a> 
+                <a href="form.html" onclick="myFunction()" id="my" class="btn-readmore">Register Yourself Here</a> 
                 <p><h3 class="page-heading" align="center" style="color: black">For Patients</h3></p>
                 <p>If you or anyone you know is in need to consult a doctor for medical help, diagnosis and treatment, please provide us with some necessary details and type of disease/treatment required and you would be able to see a list of available doctors. We would provide you with their contact information.</p>
                 <p><a href="https://form.jotform.com/jsform/201056672827053" onclick="myFunction()" id="my" class="btn-readmore">Register Yourself Here</a> 
