--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,7 @@
             <div class="cards">
                 <div class="cards-image">
                     <a href="#">
-                        <img src="b.jfif" alt="Card Image">
+                        <img src="img/take care.jpg" alt="Card Image">
                     </a>
                 </div>
 
