--- a/volunteer.html
+++ b/volunteer.html
@@ -157,8 +157,8 @@
           <p>Social mobilizers, community workers and volunteers have an important role in providing timely and actionable health information so that people know how to protect themselves and reduce the risks associated with the coronavirus disease 2019 (COVID-19).</p>
           <p>Awareness Campaign, Printing and distribution of IEC material on COVID-19 in local language.
           Some of the initiatives to be taken up by the volunteers are Procurement and distribution of hygiene & personal safety materials like masks, soaps, sanitizers etc., House to house visit to explain about the precautions to be taken for COVID-19, Distribution of food items to poor and needy, Dry ration, vegetables and kitchen being run in many places, Helping to maintain social distancing at the shops where people come for essential items.</p>
-          <a href="https://www.mygov.in/task/join-war-against-covid-19-register-volunteer/ " onclick="myFunction()" id="my" class="btn-readmore">To Volunteer</a>
-        <a href="http://ayush.gov.in/covid-19-ayush-volunteers-0" onclick="myFunction()" id="my" class="btn-readmore">To Volunteer</a>        </div>
+          <a href="https://www.mygov.in/task/join-war-against-covid-19-register-volunteer/ " onclick="myFunction()" id="my" class="btn-readmore">To Volunteer under government schemes</a>
+        <a href="https://indianredcross.org/ircs/getinvolved#volunteers" onclick="myFunction()" id="my" class="btn-readmore">To Volunteer for Indian Red Cross Society</a>        </div>
         
       </div>
     </div>
